1.04: Options for disabling fallback image, related posts, low-res images, fixed overflow in mobile menu

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 	Theme Name: Koji
     Text Domain: koji
-	Version: 1.03
+	Version: 1.04
 	Description: Koji is a clean and lightweight theme for bloggers. It features a masonry grid on the archive pages, a beautiful and minimal design, Gutenberg support, infinite scroll loading that can be set to load more posts on button click or when the visitor reaches the bottom of the page, settings for what post meta to display on archive pages and on single posts, icon links to social media pages, custom logo support, a search overlay that can be accessed from any page, and much more. Demo: http://www.andersnoren.se/themes/koji/
 	Tags: two-columns, left-sidebar, grid-layout, custom-background, custom-logo, editor-style, featured-images, sticky-post, theme-options, threaded-comments, translation-ready, blog, photography, portfolio
 	Author: Anders Norén
@@ -1193,6 +1193,7 @@ ul.social-icons li {
 	background: #fff;
 	display: flex;
 	opacity: 0;
+	overflow: auto;
 	padding: 9.2rem 0 4.5rem 0;
 	position: fixed;
 		bottom: 0;
